Korrigiert bis einschl. Sect. 4.2

--- a/RL_vehicles_references.bib
+++ b/RL_vehicles_references.bib
@@ -86,8 +86,9 @@ keywords = "Car-following model, Traffic oscillations, Flow instability, Acceler
 
 
 @article{vehicleCrashSurvey2015,
-  title={Critical Reasons for Crashes Investigated in the National Motor Vehicle Crash Causation Survey}, 
-  author={US Department of Transportation National Highway Traffic Safety Administration},
+  title={Critical Reasons for Crashes Investigated in the National Motor Vehicle Crash Causation Survey},
+  author={Singh, Santokh},
+  publisher={US Department of Transportation National Highway Traffic Safety Administration},
   journal={NHTSA, Washington, DC, USA},
   year={2015}
 }
